--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -109,6 +109,7 @@
             <script src="{{ asset('Js/appModal.js')}}"></script>
             <script src="{{ asset('Js/popUpArticlePanier.js')}}"></script>
             <script src="{{ asset('Js/VoirPlusAdresse.js')}}"></script>
+            <script src="{{ asset('Js/appCheck.js')}}"></script>
         {% endblock %}
     </body>
 </html>
