--- a/templates/cart/livraison.html.twig
+++ b/templates/cart/livraison.html.twig
@@ -5,7 +5,8 @@
 {% block body %}
 {% if app.user %}
     {% if app.session.get('panier') %}
-        <div class="containerLivraison">
+    <div class="containerLivraison">
+            <form class="livraisonContainer" action="{{ path('app_payement')}}" method="post">
             <div class="sousContainerLivraison">
                 {% for user in users %}
                     {% if user.id == app.user.id %}
@@ -13,7 +14,7 @@
                             {% if adresse.client.id == app.user.id %}
                                 <div class="adresseContainer">
                                     <div class="vAdresse">
-                                        <input type="radio" id="" name="adresse" value="adresse{{ adresse.id }}" />
+                                        <input required type="radio" id="" name="adresse" value="{{ adresse.id }}" />
                                         <h2>Votre adresse</h2>
                                     </div>
                                     <div class="adresseBigPart">
@@ -67,7 +68,6 @@
                         </div>
                     {% endif %}
                 {% endfor %}
-                <form class="livraisonContainer" method="post">
                     <h2>Choisissez votre livraison</h2>
                     <div class="livraisonChoice">
                         <input class="radioLiv" type="radio" name="livraison" value="standard" checked/>
@@ -86,33 +86,33 @@
                         </div>
                         <span>Gratuit</span>
                     </div>
-                </form>
-            </div>
-            <div class="sousContainerRecap">
-                <div class="titreContainerRecap">
-                    <h1>Récapitulatif</h1>
                 </div>
-                <span>Article :</span>
-                {% for data in data %}
+                <div class="sousContainerRecap">
+                    <div class="titreContainerRecap">
+                        <h1>Récapitulatif</h1>
+                    </div>
+                    <span>Article :</span>
+                    {% for data in data %}
                     <div class="rowPrixArticle">
                         <span>{{data.article.libelle}}</span>
                         <span>{{data.quantite}} x {{data.article.prix}} €</span>
                     </div>
-                {% endfor %}
-                <div class="rowPrixArticle">
-                    <span>Livraison</span>
-                    <span id="prixLiv">{{ prixLivraison }} €</span>
-                </div>
-                <div class="rowPrixArticle">
-                    <h4>Total Commande</h4>
-                    <div class="price">
-                        <h4 id="prixTotal">{{total + prixLivraison }}</h4>
-                        <h4>€</h4>
+                    {% endfor %}
+                    <div class="rowPrixArticle">
+                        <span>Livraison</span>
+                        <span id="prixLiv">{{ prixLivraison }} €</span>
                     </div>
+                    <div class="rowPrixArticle">
+                        <h4>Total Commande</h4>
+                        <div class="price">
+                            <h4 id="prixTotal">{{total + prixLivraison }}</h4>
+                            <h4>€</h4>
+                        </div>
+                    </div>
+                    <input class="btnCommander" type="submit" value="Payer">
+                </form>
                 </div>
-                <input class="btnCommander" type="submit" value="Commander">
             </div>
-        </div>
     {% else %}
         <h2>Votre panier est vide.</h2>
     {% endif %}
