--- a/public/Css/style.css
+++ b/public/Css/style.css
@@ -1526,8 +1526,118 @@ main{
     padding: 0px 5px;
 }
 
+.commandeLinkContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+}
+
+.commandLink{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    margin: 2%;
+    position: relative;
+}
+
+.commandBarre{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    margin: 2%;
+    position: relative;
+}
+
+.commandBarre::after{
+    content: "";
+    position: absolute;
+    background-color: #65451F;
+    width: 100%;
+    height: 3px;
+    border-radius: 50px;
+    left: 0;
+    bottom: -6px;
+}
+
+.commandLink::after{
+    content: "";
+    position: absolute;
+    background-color: #65451F;
+    width: 0;
+    height: 3px;
+    border-radius: 50px;
+    left: 0;
+    bottom: -6px;
+    transition: 0.3s;
+}
+
+.commandLink:hover::after{
+    width: 100%;
+}
+
+.commandLink:hover{
+    color: #65451F;
+}
+
 .btnAvis:hover{
     box-shadow: inset 150px 0 0 0 white;
     color: #65451F;
     
+}
+/* *****************************************FORM AVIS PAGE*********************************************************** */
+.commentaireForm {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border: 0;
+    resize: none;
+    height: 250px;
+    width: 100%;
+    background-color: #f1f1f1;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+.btnCommentaire {
+    background-color: #B5CB99;
+    border: 0;
+    width: 100%;
+    font-size: 17px;
+    color: white;
+    border-radius: 50px;
+    cursor: pointer;
+    margin-top: 3%;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.avisContainer {
+    display: flex;
+    flex-direction: row;
+    width: 95%;
+    
+}
+
+.commentaireDiv {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.commentaireContainer{
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    margin-left: 2%;
+}
+
+.star{
+    font-size: 50px;
+}
+
+.star i {
+    cursor: pointer;
+}
+
+.btnCommentaire:active{
+    transform: scale(0.96);
 }
