--- a/public/Css/style.css
+++ b/public/Css/style.css
@@ -730,6 +730,52 @@ main{
     display: flex;
     justify-content: end;
 }
+
+.btnDelete {
+    text-decoration: none;
+    background-color: #FF8080;
+    border: #FF8080 solid 2px;
+    color: white;
+    font-size: 20px;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    transition: ease-out 0.2s;
+    box-shadow: inset 0 0 0 0 white;
+    outline: none;
+}
+
+.Allbtn {
+    display: flex;
+    flex-direction: row;
+    width: 7%;
+    justify-content: space-between;
+}
+
+.spanAvis{
+    display: flex;
+    justify-content: space-between;
+    width: 85%;
+}
+
+.btnDelete:hover{
+    box-shadow: inset 30px 0 0 0 white;
+    color: #FF8080;
+}
+
+.trieAvis{
+    display: flex;
+    flex-direction: column;
+}
+
+.trieAvis a {
+    text-decoration: none;
+    color: black;
+}
+
 /* ***************************************************Categorie page*********************************************************** */
 .cardCategorie{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -1628,10 +1674,16 @@ main{
     flex-direction: column;
     text-align: start;
     margin-left: 2%;
+    padding-bottom: 50px;
 }
 
 .star{
     font-size: 50px;
+}
+
+.starContainer{
+    display: flex;
+    flex-direction: row;
 }
 
 .star i {
