--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -108,7 +108,18 @@
                                 <i class="fa-regular fa-star" style="color: #EAC696;"></i>
                             </div>
                         {% endif %}
-                            <span>de la part d'un utilisateur anonyme</span>
+                            <div class="spanAvis">
+                                <span>de la part d'un utilisateur anonyme</span>
+                                <div class="Allbtn">
+                                {% if is_granted('ROLE_ADMIN') %}
+                                    <a href="{{path('app_avis_del', {'id': commentaires.id})}}" class="btnDelete"><i class="fa-solid fa-trash"></i></a>
+                                    <a href="{{path('edit_avis', {'id': article.id})}}" class="btnEdit"><i class="fa-solid fa-gear"></i></a> 
+                                {% elseif app.user.id == commentaires.client.id %}
+                                    <a href="{{path('app_avis_del', {'id': commentaires.id})}}" class="btnDelete"><i class="fa-solid fa-trash"></i></a>
+                                    <a href="{{path('edit_avis', {'id': article.id})}}" class="btnEdit"><i class="fa-solid fa-gear"></i></a> 
+                                {% endif %}
+                                </div>
+                            </div>
                     </div>
                     <div class="commentaire">
                         {% if commentaires.commentaire == null %}
@@ -125,7 +136,11 @@
         </div>
     </div>
     <div class="trieAvis">
-        
+        <a href="">1 étoile ( avis)</a>
+        <a href="">2 étoiles ( avis)</a>
+        <a href="">3 étoiles ( avis)</a>
+        <a href="">4 étoiles ( avis)</a>
+        <a href="">5 étoiles ( avis)</a>
     </div>
 </div>
 {% endblock %}
