trie in progress

--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -136,11 +136,11 @@
         </div>
     </div>
     <div class="trieAvis">
-        <a href="">1 étoile ( avis)</a>
-        <a href="">2 étoiles ( avis)</a>
-        <a href="">3 étoiles ( avis)</a>
-        <a href="">4 étoiles ( avis)</a>
-        <a href="">5 étoiles ( avis)</a>
+        <a href="">1 étoile <i class="fa-solid fa-star" style="color: #EAC696;"></i>({{ count }} avis)</a>
+        <a href="">2 étoiles <i class="fa-solid fa-star" style="color: #EAC696;"></i>({{ count2 }} avis)</a>
+        <a href="">3 étoiles <i class="fa-solid fa-star" style="color: #EAC696;"></i>({{ count3 }} avis)</a>
+        <a href="">4 étoiles <i class="fa-solid fa-star" style="color: #EAC696;"></i>({{ count4 }} avis)</a>
+        <a href="">5 étoiles <i class="fa-solid fa-star" style="color: #EAC696;"></i>({{ count5 }} avis)</a>
     </div>
 </div>
 {% endblock %}
