--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -28,7 +28,7 @@
                     </div>
                 {% endif %}
             {% else %}
-                <h2>Votre panier est vide</h2>
+                <h2 class="panierEmpty">Votre panier est vide</h2>
             {% endfor %}
         </div>
         <div class="achat">
