--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -7,13 +7,12 @@
     <div class="adminSousContainer">
         <div class="addContainer">
             <a href="{{path('add_article')}}" class="addAdmin">Ajouter un article</a>
-            <a href="" class="addAdmin">Ajouter une origine</a>
-            <a href="" class="addAdmin">Ajouter une catégorie</a>
-            <a href="" class="addAdmin">Ajouter une commande</a>
-            <a href="" class="addAdmin">Ajouter une facture</a>
-            <a href="" class="delAdmin">Supprimer une commande</a>
-            <a href="" class="delAdmin">Supprimer une facture</a>
-            <a href="" class="voirClickAndCollect">Voir les commandes click an collect</a>
+            <a href="{{path('add_origine')}}" class="addAdmin">Ajouter une origine</a>
+            <a href="{{path('add_categories')}}" class="addAdmin">Ajouter une catégorie</a>
+            <a href="{{path('add_facture')}}" class="addAdmin">Ajouter une facture</a>
+            <a href="{{path('del_facture')}}" class="delAdmin">Supprimer une facture</a>
+            <a href="{{path('del_origine')}}" class="delAdmin">Supprimer une origine</a>
+            <a href="{{path('app_commande_VoirClickAndCollect')}}" class="voirClickAndCollect">Voir les commandes click an collect</a>
         </div>
         <div class="infoCommandeContainer">
             <div class="titleDescriptif">
