--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -112,6 +112,7 @@
             <script src="{{ asset('Js/appCheck.js')}}"></script>
             <script src="{{ asset('Js/appCommandeAnimation.js')}}"></script>
             <script src="{{ asset('Js/appNotation.js')}}"></script>
+            <script src="{{ asset('Js/appSearchUser.js')}}"></script>
         {% endblock %}
     </body>
 </html>
