--- a/templates/categorie/indexCafesEnGrains.html.twig
+++ b/templates/categorie/indexCafesEnGrains.html.twig
@@ -16,7 +16,7 @@
         </figure>
     </div>
     <div class="cardContainer">
-        <h2>Listes des cafés en capsules</h2>
+        <h2>Listes des cafés en grains</h2>
         <div class="sousCardContainerCategorie">
             {% for categorie in categories %}
                 <div class="cardCategorie">
