--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -14,6 +14,7 @@
             <a id="mois" class="commandLink" href="{{path('app_commande_mois')}}">Commandes du mois</a>
             <a id="annee" class="commandLink" href="{{path('app_commande_annee')}}">Commandes de l'année</a>
             <a id="tout" class="commandLink" href="{{path('app_commande')}}">Toute les commandes</a>
+            <a id="click" href="{{path('app_commande_VotreClickAndCollect')}}" class="commandLink">Vos Commande en click and collect</a>
         </div>
        </div>
     </div>
