--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -232,6 +232,12 @@
                 <button class="btnVoirPlus" id="bouton">Voir plus</button>
             </div>
         </div>
+        {% if is_granted('ROLE_ADMIN') %}
+            <div class="btnCate">
+                <a href="{{path('edit_article', {'id': article.id})}}"  class="btnEdit"><i class="fa-solid fa-gear"></i></a>
+                <a href="{{path('delete_article', {'id': article.id})}}" class="btnDelete"><i class="fa-solid fa-trash"></i></a>
+            </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
